# S22_Daniel_Elkik

./: .gitignore  CMakeLists.txt  Game.sln  unique.txt
Game/: CMakeLists.txt  Character.cpp  Character.h  Entity.cpp  Entity.h  Game.vcxproj  Game.vcxproj.filters  GameApp.cpp  GameApp.h  Projectile.cpp  Projectile.h  main.cpp
Peng/: CMakeLists.txt  Events.cpp  Events.h  GameWindow.cpp  GameWindow.h  KeyCodes.h  Peng.h  Peng.vcxproj  Peng.vcxproj.filters  PengApp.cpp  PengApp.h  PengUtil.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Sprite.cpp  Sprite.h  SpriteImplementation.h  WindowImplementation.h  pch.h
Peng/Assets/Shaders/: defaultFragment.glsl  defaultVertex.glsl
Peng/specificGLFW/: GlfwWindow.cpp  GlfwWindow.h
Peng/specificOpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLSprite.cpp  OpenGLSprite.h
glad/: CMakeLists.txt  glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
